# TinyGLASS

./: .gitignore  README.md  backbones.py  classifier.py  common.py  demo_imx500.py  environment.yml  forward.py  glass.py  glass_env311.yml  glass_env311_rpi.yml  imx500_glass_full.py  main.py  mct.py  mct_pt.py  mct_pt_full.py  model.py  ort_gpu.yml  plot_loss.py  plot_results.py  profiler.py  pyproject.toml  run_quant_mvtec_all.py  upload_to_hf.py  utils.py
datasets/: mvtec.py
datasets/excel/: mvtec_distribution.xlsx
onnx/: onnx_tester.py  ort.py  pth2onnx.py  pth2onnx2_full.py  pth2onnx3.py
shell/: run_all.sh  run_contamination.sh  run_tinyglass_mms.sh  run_tinyglass_mvtec_gpu0.sh  run_tinyglass_mvtec_gpu1.sh
tools/: analyze_onnx_mem.py
