[project]
name = "tinyglass"
version = "0.1.0"
description = "TinyGLASS: Real-Time Self-Supervised In-Sensor Anomaly Detection"
requires-python = ">=3.11,<3.12"
dependencies = [
    "click==8.1.7",
    "imgaug==0.4.0",
    "matplotlib==3.8.2",
    "numpy==1.26.3",
    "onnx==1.16.2",
    "onnxsim==0.4.36",
    "opencv-python-headless==4.10.0.84",
    "pandas==1.5.2",
    "pillow==10.2.0",
    "scikit-image==0.22.0",
    "scikit-learn==1.4.0",
    "scipy==1.11.4",
    "tensorboard==2.15.1",
    "timm==0.9.12",
    "torch==2.1.2",
    "torchvision==0.16.2",
    "tqdm==4.66.1",
    "huggingface-hub>=0.24.0",
    "openpyxl>=3.1.0",
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }
